# shoogah

./: Cargo.toml  README.md
src/: cxp.rs  lib.rs  map.rs
tests/: boo.rs  cxp.rs  hml.rs  map.rs  sin.rs  spr.rs  suf.rs
